# connect4-OCaml

./: .gitignore  Design.md  Readme.md  connect4.opam  dune-project  gamelogic.md
app/: .gitignore  README.md  bsconfig.json  dune  index.html  package.json  rescript.json  run.sh
app/client/: client.res  client.res.mjs
app/common/: common.ml
app/server/: dune  server.eml.ml
app/static/: client.res.js  form.res.js  page.css
demo/dream/: run.sh
rs/chess/: package-lock.json  package.json  rescript.json
rs/chess/src/: chess.res
src/: connect4.ml  connect4.opam  connect4_ban.ml  connect4_bonus.ml  dune  index.html  judge.ml  judge.mli  play_alpha.ml  play_bonus_mcts.ml  play_mcts.ml  play_minimax.ml  point.ml  pvp_bonus.ml  run.sh  state.ml  state.mli  strategy.ml  strategy.mli  tree.ml  tree.mli  uct.ml  uct.mli
src-test/: alpha_beta_tests.ml  connect4_ban_tests.ml  connect4_bonus_tests.ml  connect4_tests.ml  dune  judge_tests.ml  mcts_tests.ml  minimax_tests.ml  state_tests.ml  tests.ml  tree_tests.ml  utils_tests.ml
src/app/: c4.html
src/app/assets/css/: c4.css
src/app/assets/js/: c4.js
src/backend/: connect4.ml  connect4.mli  connect4_ban.ml  connect4_ban.mli  connect4_bonus.ml  connect4_bonus.mli  dune
src/client/: client.res  client.res.mjs  form.res  form.res.mjs
src/lib/: alpha_beta.ml  alpha_beta.mli  dune  judge.ml  judge.mli  mcts.ml  mcts.mli  minimax.ml  minimax.mli  tree.ml  tree.mli  uct.mli  utils.ml  utils.mli
src/server/: dune  server.eml.ml
src/static/: client.res.js  page.css
