(library
 (name judge_tests)
 (modules judge_tests)
 (libraries core ounit2 judge))

(library
 (name state_tests)
 (modules state_tests)
 (libraries core ounit2))

(library
 (name tree_tests)
 (modules tree_tests)
 (libraries core ounit2))

(test
 (name tests)
 (modules tests)
 (libraries core ounit2 judge_tests state_tests tree_tests))
