(library
 (name judge_tests)
 (modules judge_tests)
 (libraries core ounit2 judge))

(library
 (name utils_tests)
 (modules utils_tests)
 (libraries core ounit2 utils))

(library
 (name alpha_beta_tests)
 (modules alpha_beta_tests)
 (libraries core ounit2 alpha_beta))


(library
 (name mcts_tests)
 (modules mcts_tests)
 (libraries core ounit2 mcts))

(library
 (name minimax_tests)
 (modules minimax_tests)
 (libraries core ounit2 minimax))

(library
 (name connect4_tests)
 (modules connect4_tests)
 (libraries core ounit2 connect4))

(library
 (name connect4_ban_tests)
 (modules connect4_ban_tests)
 (libraries core ounit2 connect4_ban))

(library
 (name connect4_bonus_tests)
 (modules connect4_bonus_tests)
 (libraries core ounit2 connect4_bonus))


(test
 (name tests)
 (modules tests)
 (libraries core ounit2 judge_tests utils_tests alpha_beta_tests mcts_tests minimax_tests connect4_tests connect4_ban_tests connect4_bonus_tests))
