(library
 (name point)
 (modules point)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name judge)
(modules judge)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name state)
 (modules state)
 (libraries core point judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name tree)
 (modules tree)
 (libraries core point judge state)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name uct)
 (modules uct)
 (libraries core state tree point judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name strategy)
 (modules strategy)
 (libraries core point state tree uct judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))
