(library
 (name connect4)
 (modules connect4)
 (libraries core judge utils)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name connect4_ban)
 (modules connect4_ban)
 (libraries core judge utils)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name connect4_bonus)
 (modules connect4_bonus)
 (libraries core judge utils)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(executable
 (name play_mcts)
 (modules play_mcts)
 (libraries core connect4 mcts)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(executable
 (name play_alpha)
 (modules play_alpha)
 (libraries core connect4 alpha_beta)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(executable
 (name play_minimax)
 (modules play_minimax)
 (libraries core connect4 minimax)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(executable
 (name play_bonus_mcts)
 (modules play_bonus_mcts)
 (libraries core connect4_bonus mcts)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))