(library
 (name judge)
 (modules judge)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name mcts)
 (modules mcts)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name alpha_beta)
 (modules alpha_beta)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name state)
 (modules state)
 (libraries core judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name tree)
 (modules tree)
 (libraries core judge state)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name uct)
 (modules uct)
 (libraries core state tree judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))

(library
 (name strategy)
 (modules strategy)
 (libraries core state tree uct judge)
 (preprocess
  (pps ppx_deriving.show ppx_jane bisect_ppx)))
