(executable
 (name server)
 (libraries
  alpha_beta
  judge
  mcts
  minimax
  utils
  connect4_ban
  connect4_bonus
  connect4
  ; play_alpha
  ; play_mcts
  ; play_minimax
  dream
  core
  core_unix
  core_unix.sys_unix
  stdio)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets server.ml)
 (deps server.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))
